--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Browser Tech</title>
-
+    <title>UX of HTML</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <section>
-    <h1>
-      Traag internet
-    </h1>
-    <img src="#" alt="Dit zie je dus eerst als de afbeeldingen te groot zijn.">
-  </section>
+<h1>UX of HTML</h1>
+<a href="#test" download="ux.html">Test</a>
+<form>
+    <fieldset id="a1">
+        <legend>Persoonsgegevens</legend>
+        <fieldset>
+            <legend>Adress</legend>
+            <input type="text" name="Adress" placeholder="Adress" required>
+            <legend>emai</legend>
+            <input type="email" name="Email" placeholder="Email" required>
+        </fieldset>
+    </fieldset>
+</form>
+<a href="#test" download="ux.html">Test</a>
+
+<script src="JS/opdracht.js"></script>
 </body>
 </html>
