--- a/uitleg.html
+++ b/uitleg.html
@@ -6,9 +6,13 @@
   <link rel="stylesheet" href="css/uitleg.css">
 </head>
 <body>
-<h1>Uitleg Formelementen</h1>
-
-
+    <h1>Uitleg Formelementen</h1>
+    <form>
+        <fieldset>
+            <legend>Adress</legend>
+            <input type="text" name="Adress" placeholder="Adress" required>
+        </fieldset>
+    </form>
 <script src="JS/uitleg.js"></script>
 </body>
 </html>
