--- a/index.html
+++ b/index.html
@@ -1,67 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>UX of HTML</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-<h1>UX of HTML</h1>
-<form>
-    <h2>Gegevens van de Overledene</h2>
-    <h3>Vul hier de gegevens in van de overledene.</h3>
-    <fieldset>
-        <legend>1</legend>
-        <fieldset>
-            <legend>1.a</legend>
-            <label for="voorenachter">
-                Voorletter(s), tussen-
-                voegsel(s) en achternaam
-            </label>
-            <input type="text" name="naam" id="voorenachter">
-            <label for="bsn">Burgerservicenummer overledene</label>
-            <input type="text" name="bsn" id="bsn">
-            <label for="overlijdensdatum">Overlijdensdatum</label>
-            <input type="date" name="overlijdensdatum" id="overlijdensdatum">
-        </fieldset>
-        <fieldset>
-            <legend>1.b</legend>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/fonts.css" />
+  </head>
+  <body>
+    <section class="intro">
+      <h1>Erfbelasting</h1>
+    </section>
+    <form>
+      <nav>
+        <input type="radio" id="tab1" name="tabs" checked />
+        <label for="tab1" class="ns-button">1</label>
+
+        <input type="radio" id="tab2" name="tabs" />
+        <label for="tab2" class="ns-button">2</label>
+
+        <input type="radio" id="tab3" name="tabs" />
+        <label for="tab3" class="ns-button">3</label>
+
+        <input type="radio" id="tab4" name="tabs" />
+        <label for="tab4" class="ns-button">4</label>
+      </nav>
+      <div class="tab-content">
+        <section class="sectie1">
+          <h2>Gegevens van de Overledene</h2>
+          <h3>Vul hier de gegevens in van de overledene.</h3>
+          <fieldset class="container">
+            <legend>1</legend>
             <fieldset>
-                <legend>
-                    Was de overledene getrouwd of had de overledene een
-                    geregistreerd partner op het moment van overlijden?
-                </legend>
-                <label for="partnerN">Nee. <i>Ga verder met vraag 1c.</i></label>
-                <input type="radio" name="partner" id="partnerN" value="Nee">
-                <label for="partnerJ">Ja</label>
-                <input type="radio" name="partner" id="partnerJ" value="Ja">
+              <legend>1.a</legend>
+              <div class="vraagenIput">
+                <label for="voorenachter">
+                  Voorletter(s), tussen- voegsel(s) en achternaam
+                </label>
+                <input type="text" name="naam" id="voorenachter" required />
+              </div>
+              <div class="vraagenIput">
+                <label for="bsn">Burgerservicenummer overledene</label>
+                <input type="text" name="bsn" id="bsn" required />
+              </div>
+              <label for="overlijdensdatum">Overlijdensdatum</label>
+              <input
+                type="date"
+                name="overlijdensdatum"
+                id="overlijdensdatum"
+              />
             </fieldset>
-            <p>
-                Hadden de overledene en diens echtgenoot of
-                geregistreerd partner huwelijkse of partner schaps-voorwaarden laten vastleggen in een notariële akte?
-            </p>
-            <label for="akteN">Nee</label>
-            <input type="radio" name="akte" id="akteN" value="Nee">
-            <label for="akteJ">Ja.<i>Stuur kopie van de akte mee met de aangifte.</i></label>
-            <input type="radio" name="akte" id="akteJ" value="Ja">
-            <p>
-                Hadden de overledene en diens partner een finaal verrekenbeding?
-            </p>
-            <label for="bedingN">Nee</label>
-            <input type="radio" name="beding" id="bedingN" value="Nee">
-            <label for="bedingJ">Ja</label>
-            <input type="radio" name="beding" id="bedingJ" value="Ja">
-            <label for="huwelijksdatum">Datum huwelijkse of partnerschapsvoorwaarden</label>
-            <input type="date" name="huwelijksdatum" id="huwelijksdatum">
-        </fieldset>
-    </fieldset>
-</form>
-<script src="JS/opdracht.js"></script>
-</body>
+            <fieldset>
+              <legend>1.b</legend>
+              <fieldset>
+                <legend>
+                  Was de overledene getrouwd of had de overledene een
+                  geregistreerd partner op het moment van overlijden?
+                </legend>
+                <label for="partnerN"
+                  >Nee. <i>Ga verder met vraag 1c.</i></label
+                >
+                <input type="radio" name="partner" id="partnerN" value="Nee" />
+                <label for="partnerJ">Ja</label>
+                <input type="radio" name="partner" id="partnerJ" value="Ja" />
+              </fieldset>
+              <fieldset id="partnerDetails">
+                <legend>
+                  Hadden de overledene en diens echtgenoot of geregistreerd
+                  partner huwelijkse of partner schaps-voorwaarden laten
+                  vastleggen in een notariële akte?
+                </legend>
+                <label for="akteN">Nee</label>
+                <input type="radio" name="akte" id="akteN" value="Nee" />
+                <label for="akteJ"
+                  >Ja.<i>Stuur kopie van de akte mee met de aangifte.</i></label
+                >
+                <input type="radio" name="akte" id="akteJ" value="Ja" />
+                <legend>
+                  Hadden de overledene en diens partner een finaal
+                  verrekenbeding?
+                </legend>
+                <label for="bedingN">Nee</label>
+                <input type="radio" name="beding" id="bedingN" value="Nee" />
+                <label for="bedingJ">Ja</label>
+                <input type="radio" name="beding" id="bedingJ" value="Ja" />
+                <label for="huwelijksdatum"
+                  >Datum huwelijkse of partnerschapsvoorwaarden</label
+                >
+                <input type="date" name="huwelijksdatum" id="huwelijksdatum" />
+              </fieldset>
+            </fieldset>
+            <fieldset>
+              <legend>1.c</legend>
+              <fieldset>
+                <legend>Had de overledene kinderen?</legend>
+                <label for="kinderenN">Nee</label>
+                <input
+                  type="radio"
+                  name="kinderen"
+                  id="kinderenN"
+                  value="Nee"
+                />
+                <label for="kinderenJ">Ja</label>
+                <input type="radio" name="kinderen" id="kinderenJ" value="Ja" />
+              </fieldset>
+            </fieldset>
+          </fieldset>
+        </section>
+        <section class="sectie2">Sectie 2</section>
+        <section class="sectie3">Sectie 3</section>
+      </div>
+    </form>
+    <script src="JS/opdracht.js"></script>
+    <script>
+      document.body.className += " display";
+    </script>
+  </body>
 </html>
 <!--            -->
 <!--            <optgroup></optgroup>-->
 <!--            <hr>-->
 <!--            Dit is opties in een dropdown-->
 
-input type text input mode numeric voor
+<!--showing and hiding doe je met css dus standaard wel showen en dan niet showen met has: checked etc dus als iemand geen kinderen heeft iets verbergen en met javascript kan je dus wel required toevoegen  -->
+<!-- accent-color voor checkboxes -->
+<!--showing and hiding with has and has not-->
+<!--:user-invalid ipv :invalid-->
