--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </label>
                 <input
                   type="text"
-                  name="naam"
+                  name="naamOverledene"
                   id="voorenachter"
                   placeholder="bijv. Liam van Bart"
                   required
@@ -194,7 +194,7 @@
                   </label>
                   <input
                     type="text"
-                    name="naam"
+                    name="naamVerkrijger1"
                     id="voorenachter1"
                     placeholder="bijv. Liam van Bart"
                     required
@@ -249,7 +249,7 @@
                   </label>
                   <input
                     type="text"
-                    name="naam"
+                    name="naamVerkrijger2"
                     id="voorenachter2"
                     placeholder="bijv. Liam van Bart"
                     required
@@ -303,7 +303,7 @@
                 </label>
                 <input
                   type="text"
-                  name="naam"
+                  name="naamVerkrijger3"
                   id="voorenachter3"
                   placeholder="bijv. Liam van Bart"
                   required
